--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,28 @@
     transform: rotate(360deg);
   }
 }
+.mid-space{
+  height: 100px;
+  /* background: #000; */
+  width: 100%;
+}
+
+.bg {
+  background-image: url(../src/images/bg.png);
+  background-size: cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.cards{
+  position: relative;
+
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
